--- a/assignment2/build.gradle
+++ b/assignment2/build.gradle
@@ -38,5 +38,5 @@ dependencies {
 
 application {
     // Define the main class for the application
-    mainClassName = 'assignment1.App'
+    mainClassName = 'assignment2.ImageLabelReader'
 }
