--- a/assignment2/.project
+++ b/assignment2/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>assignments_assignment1</name>
-	<comment></comment>
+	<name>assignment2</name>
+	<comment>Project assignment2 created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
