first part successful on local tests

--- a/assignment2/.vscode/launch.json
+++ b/assignment2/.vscode/launch.json
@@ -6,6 +6,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - ImageLabelReaderTest",
+            "request": "launch",
+            "mainClass": "assignment2.ImageLabelReaderTest"
+        },
+        {
+            "type": "java",
             "name": "Debug (Launch) - Current File",
             "request": "launch",
             "mainClass": "${file}"
