--- a/assignment2/.settings/org.eclipse.buildship.core.prefs
+++ b/assignment2/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(5.4))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=
+java.home=C\:/Users/refni/AppData/Local/Programs/AdoptOpenJDK
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
